--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
 :root {
     --background : #fff;
     --heading-color1 : #fff;
-    --heading-color2 : #fff;
+    --heading-color2 : grey;
     --text-color : grey;
     --text-color1 : #fff;
+    --input-background : whitesmoke;
 }
 
 body {
     background: var(--background);
+    font-family: "Fredoka", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+    margin: 0;
 }
 
 #navbar {
@@ -16,9 +22,15 @@ body {
     justify-content: space-between;
 }
 
+#logo {
+    margin-left: 1rem;
+}
+
 #bars {
     font-size: 2rem;
     color: var(--text-color);
+    margin-right: 1rem;
+    cursor: pointer;
 }
 
 section {
@@ -44,6 +56,7 @@ section {
     font-size: 2.0rem;
     text-shadow: 0 0 2px lightgrey;
     transform: skew(0deg, 3deg);
+    font-weight: 500;
 }
 
 /* ------------ About section ------------- */
@@ -60,7 +73,7 @@ section {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    margin-top: -3rem;
+    margin-top: -2rem;
     z-index: 1;
     display: flex;
     align-items: center;
@@ -74,7 +87,7 @@ section {
 }
 
 #aboutHeading{
-    font-weight: 700;
+    font-weight: 500;
 }
 
 #aboutBottomContainer {
@@ -95,10 +108,13 @@ section {
 .number {
     color: var(--heading-color2);
     margin: 0.5rem  0;
+    font-weight: 500;
 }
 
 .heading {
     margin: 0.5rem  0;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 .details  {
@@ -135,19 +151,20 @@ section {
     margin-top: 4rem;
 }
 
-#catering_heading {
+#cateringHeading {
     color: var(--heading-color1) ;
     background: transparent;
     transform: skew(0deg, 3deg);
     margin: 0;
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 
-#catering_text {
+#cateringText {
     color: var(--text-color1);
     background: transparent;
     transform: skew(0deg, 2deg);
     text-shadow: 0 0px 5px grey;
-    font-weight: 700;
 }
 
 #cateringContainer{
@@ -177,6 +194,7 @@ section {
 
 .cateringItemText  {
     color: var(--text-color1);
+    text-align: center;
 }
 
 #cateringImg1 {
@@ -213,7 +231,7 @@ section {
 }
 
 #menuHeading {
-    font-weight: 700;
+    font-weight: 500;
 }
 
 #menuTopContainer {
@@ -289,8 +307,9 @@ section {
     background:transparent;
     color: var(--heading-color1);
     font-size: 2.0rem;
-    text-shadow: 0 0 2px lightgrey;
+    text-shadow: 0 0 8px grey;
     transform: skew(0deg, 3deg);
+    font-weight: 500;
 }
 
 /* ------------- Team Section --------------- */
@@ -310,12 +329,12 @@ section {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    margin-top: -3rem;
+    margin-top: -2rem;
     z-index: 1;
 }
 
 #teamHeading {
-    font-weight: 700;
+    font-weight: 500;
 }
 
 #teamText  {
@@ -328,6 +347,7 @@ section {
     justify-content: space-between;
     width: 50%;
     margin: auto;
+    margin-top: 2rem;
 }
 
 .team-box {
@@ -340,31 +360,150 @@ section {
 .team-img {
     height: 100px;
     width: 100px;
-    border: 1px solid black;
     border-radius: 50%;
     margin-bottom: 1rem;
 }
 
 #teamImg1  {
-    
+    background: url('https://t3.ftcdn.net/jpg/05/06/51/46/360_F_506514612_z8oBdrajxk5eE9WlDKjliXOp3k6XqTf7.jpg') no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 #teamImg2  {
-
+    background: url('https://st4.depositphotos.com/2208684/30213/i/450/depositphotos_302139812-stock-photo-portrait-shot-smiling-businessman-wearing.jpg') no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 #teamImg3  {
-
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQI-ycnCXMU_IhRLsRqnkOnGExWNNDFFy07Kg&s') no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 #teamImg4  {
-
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSR-P4LeIu6vw7d14ej7Njbo6fMwwVDDj_KvQ&s') no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .team-name {
     margin: 0;
+    font-weight: 400;
 }
 
 .team-profession {
     color: var(--text-color);
+}
+
+/* ------------ Contact Section  ------------- */
+
+#contact  {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 3rem;
+}
+
+#contactLeftSide {
+    height: 350px;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#contactRightSide {
+    height: 350px;
+    width: 35%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#locationHeading {
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+#location {
+    color: grey;
+    margin: 0;
+}
+
+#links {    
+    margin-top: 1rem;
+}
+
+#contactText {
+    font-weight: 500;
+}
+
+#linksContainer {
+    margin-bottom: 1rem;
+}
+
+#copyright {
+    margin: 0;
+    font-size: 0.9rem;
+}
+
+.icon {
+    margin-right: 5px;
+}
+
+#formHeading {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.input {
+    width: 100%;
+    background-color: var(--input-background);
+    padding: 0.5rem;
+    border: none;
+    margin-bottom: 1rem;
+}
+
+#textArea {
+    width: 100%;
+    height: 100px;
+    padding: 0.5rem;
+    border: none;
+    background: var(--input-background);
+    margin-bottom: 1rem;
+}
+
+#submitBtn {
+    /* width: 100%; */
+    padding: 0.5rem;
+    border: none;
+    border: 1px solid black;
+    background: white;
+    /* font-size: 1rem; */
+    cursor: pointer;
+}
+
+#submitBtn:hover{
+    background-color: black;
+    color: white;
+    transition: all 0.2s;
+}
+
+/*------------------- footer ------------------*/
+#footer {
+    background-color:#474747 ;
+    color: var(--text-color1);
+    padding: 2rem;
+}
+
+#footerText {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+em, #devName {
+    color: orange;
 }
